--- a/src/main/resources/dart2-v3template/_simple_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_simple_from_json.mustache
@@ -9,7 +9,7 @@ return
       DateTime.parse(json[r'{{{baseName}}}']!)
   {{/isDateTime}}
   {{#isDate}}
-      DateTime.parse(json[r'{{{baseName}}}']{{#nullSafe}}!{{/nullSafe}} + 'T00:00:00.000Z')
+      DateTime.parse(json[r'{{{baseName}}}']! + 'T00:00:00.000Z')
   {{/isDate}}
   {{#isModel}}
     {{{complexType}}}.fromJson(json[r'{{{baseName}}}'])
