--- a/src/main/resources/dart2-v3template/_to_json_serialise.mustache
+++ b/src/main/resources/dart2-v3template/_to_json_serialise.mustache
@@ -1,9 +1,9 @@
 {{#isArray}}
-  v{{#vendorExtensions.x-dart-nullable}}?{{/vendorExtensions.x-dart-nullable}}.map((v) => {{#items}}{{> _to_json_serialise  }} {{/items}} ){{#vendorExtensions.x-dart-nullable}}?{{/vendorExtensions.x-dart-nullable}}.toList()
+  v{{#isNullable}}?{{/isNullable}}.map((v) => {{#items}}{{> _to_json_serialise  }} {{/items}} ){{#isNullable}}?{{/isNullable}}.toList()
 {{/isArray}}
 {{#isMap}}
-  Map.fromIterables({{{name}}}{{#vendorExtensions.x-dart-nullable}}{{#nullSafe}}!{{/nullSafe}}{{/vendorExtensions.x-dart-nullable}}.keys,
-  {{{name}}}{{#vendorExtensions.x-dart-nullable}}{{#nullSafe}}!{{/nullSafe}}{{/vendorExtensions.x-dart-nullable}}.values.map((v) => {{#items}} {{>  _to_json_serialise  }} {{/items}} ))
+  Map.fromIterables({{{name}}}{{#isNullable}}!{{/isNullable}}.keys,
+  {{{name}}}{{#isNullable}}!{{/isNullable}}.values.map((v) => {{#items}} {{>  _to_json_serialise  }} {{/items}} ))
 {{/isMap}}
 {{^items}}
 {{#isModel}}
@@ -13,16 +13,16 @@
   v
 {{/isPrimitiveType}}
 {{#isEnum}}
-  (v as {{{dataType}}}){{#vendorExtensions.x-dart-nullable}}?{{/vendorExtensions.x-dart-nullable}}.toJson()
+  (v as {{{dataType}}}){{#isNullable}}?{{/isNullable}}.toJson()
 {{/isEnum}}
 {{#isDate}}
-  v{{#vendorExtensions.x-dart-nullable}}?{{/vendorExtensions.x-dart-nullable}}.toUtc()
-  {{#vendorExtensions.x-dart-nullable}}{{^nullSafe}}?{{/nullSafe}}{{/vendorExtensions.x-dart-nullable}}.toIso8601String()
-  {{#vendorExtensions.x-dart-nullable}}{{^nullSafe}}?{{/nullSafe}}{{/vendorExtensions.x-dart-nullable}}.substring(0, 10)
+  v{{#isNullable}}?{{/isNullable}}.toUtc()
+  {{#isNullable}}?{{/isNullable}}.toIso8601String()
+  {{#isNullable}}?{{/isNullable}}.substring(0, 10)
 {{/isDate}}
 {{#isDateTime}}
-  v{{#vendorExtensions.x-dart-nullable}}?{{/vendorExtensions.x-dart-nullable}}.toUtc()
-  {{#vendorExtensions.x-dart-nullable}}{{^nullSafe}}?{{/nullSafe}}{{/vendorExtensions.x-dart-nullable}}.toIso8601String()
+  v{{#isNullable}}?{{/isNullable}}.toUtc()
+  {{#isNullable}}?{{/isNullable}}.toIso8601String()
 {{/isDateTime}}
 {{#isAnyType}}v{{/isAnyType}}
 {{^isModel}}
