--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -1,9 +1,9 @@
 {{#items}}
   {{#isArray}}
-    (data as List<dynamic>){{#nullSafe}}.fromNull(){{/nullSafe}}.map((data) { return ((dynamic data) { return {{>_from_json}};})(data); }).toList()
+    (data as List<dynamic>).fromNull().map((data) { return ((dynamic data) { return {{>_from_json}};})(data); }).toList()
   {{/isArray}}
   {{#isMap}}
-    (data as List<dynamic>){{#nullSafe}}.fromNull(){{/nullSafe}}.map((data) { ((dynamic data) { return {{>_from_json}};})(data); }).toList()
+    (data as List<dynamic>).fromNull().map((data) { ((dynamic data) { return {{>_from_json}};})(data); }).toList()
   {{/isMap}}
   {{^items}}
     {{#isEnum}}
@@ -26,12 +26,7 @@
           ).toList()
       {{/isNumeric}}
       {{^isNumeric}}
-        {{^nullSafe}}
-            (data as List<dynamic>)?.cast<{{{dataType}}}>()
-        {{/nullSafe}}
-        {{#nullSafe}}
-            (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.cast<{{{dataType}}}>(){{#x-dart-nullable}} ?? <{{{dataType}}}>[]{{/x-dart-nullable}}
-        {{/nullSafe}}
+          (data as List<dynamic>{{#x-dart-nullable}}?{{/x-dart-nullable}}){{#x-dart-nullable}}?{{/x-dart-nullable}}.cast<{{{dataType}}}>(){{#x-dart-nullable}} ?? <{{{dataType}}}>[]{{/x-dart-nullable}}
       {{/isNumeric}}
     {{/isPrimitiveType}}
     {{#isAnyType}}data{{/isAnyType}}
