--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -1,6 +1,9 @@
 name: {{pubName}}
 version: {{pubVersion}}
 description: {{pubDescription}}
+{{#localDev}}
+publish_to: none
+{{/localDev}}
 {{#pubRepository}}
 repository: {{{.}}}
 {{/pubRepository}}
